Makes changes to notes for Erick

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-I want jumbo slice and all the soft pillows.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello Erick!</title>
+</head>
+<body style="background-color: yellow; font-family: Tahoma; font-size: 24px; color: blue;">
+	<h1>Hi Erick!</h1>
+	<p>I hope you're having an awesome day, and enjoying learning how to fork and merge on Github!</p>
+	<p>Smooches!</p>
+	<p>- Ronesha</p>
+
+</body>
+</html>
